[package]
name = "ssb-receiver"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
futuresdr = { path = "../..", features=[ "audio"] }
futuredsp = { path = "../../futuredsp", version = "0.0.6" }
num-complex = "0.4.0"
futures = "0.3.24"
axum = "0.5.5"
tower-http = { version = "0.3.3", features = ["add-extension", "cors"] }


[[bin]]
name = "play-ssb"
path = "play_ssb.rs"